--- a/package.json
+++ b/package.json
@@ -10,7 +10,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
+    "node-fetch": "^2.6.1",
+    "nodejs-base64-converter": "^1.0.5",
+    "replace-in-file": "^6.1.0",
+    "serve-static": "^1.14.1",
     "swagger-jsdoc": "^3.4.0",
     "swagger-ui-express": "^4.0.7"
   }
